5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1785_3140.log
== TEST (2019-05-30 10:16:41) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0
while i!=de:
	d=d+(n[i]**5)
	i=i+1
m=(d/de)*1/5
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:19:33) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i!=de:
	d=d+(n[i]**5)
	i=i+1
	print(d)
m=(d/de)*1/5


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:20:34) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i!=de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i]**5)
m=(d/de)*1/5


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:20:47) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i!=de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i-1]**5)
m=(d/de)*1/5


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:39) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i!=de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i-1]**5)
	print(s/de)
m=(d/de)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:43) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i!=de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i-1]**5)
	print(d/de)
m=(d/de)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:13) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i<de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i-1]**5)
	print(d/de)
m=(d/de)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:43) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i<de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i-1]**5)
	print(d/de)**1/5
m=(d/de)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:30) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i<de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i-1]**5)
	m=(d/de)
	print(m**1/5)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:15) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i<de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i-1]**5,n[i])
	m=(d/de)
	print(m**1/5)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:25) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i<de:
	d=d+(n[i]**5)
	i=i+1
	print(d,n[i-1]**5,n[i-1])
	m=(d/de)
	print(m**1/5)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:21) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i>=-de:
	d=d+(n[j]**5)
	j=j-1
	print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:43) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while i>-de:
	d=d+(n[j]**5)
	j=j-1
	print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:32:09) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while j>-de:
	d=d+(n[j]**5)
	j=j-1
	print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:32:22) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while j>-de:
	d=d+(n[j]**5)
	j=j-1
	print(n[j])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:32:42) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while j>-de:
	d=d+(n[j]**5)
	print(n]j)
	j=j-1
	print(n[j])


-- ERROR:
File "XXXX", line 12
    print(n]j)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:32:47) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while j>-de:
	d=d+(n[j]**5)
	print(n[j])
	j=j-1



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:07) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0

j=-1
e=n[j]

while j>-de:
	d=d+(n[j]**5)
	print(n[j],j)
	j=j-1



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:27) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0
while i!=de:
	print(n[i])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:35:32) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0
while i!=de:
	d=d+n[i]**5
	i=i+1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:36:40) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0
while i!=de:
	d=d+n[i]**5
	i=i+1
m=d/de
print(m**1/5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:05) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0
while i!=de:
	d=d+n[i]**5
	i=i+1
m=d/de
print(m**(1/5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:55) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0
while i!=de:
	d=d+n[i]**5
	i=i+1
m=d/de
r=m**(1/5)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:03) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0
while i!=de:
	d=d+n[i]**5
	i=i+1
m=d/de
r=m**(1/5)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:39:05) 
-- CODE:
from numpy import*
n=array(eval(input("insira n numeros reais positivos: ")))
de=size(n)
i=0
d=0
while i!=de:
	d=d+n[i]**5
	i=i+1
m=d/de
r=m**(1/5)
print(round(r,2))
-- EXECUTION TIME:
0.504018
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
6.07
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
5.05
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
3.97
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
